Added employeeService and employee list

--- a/views/employees.ejs
+++ b/views/employees.ejs
@@ -23,7 +23,7 @@
         </tr>
       </thead>
       <tbody>
-        <% employees.forEach(user => { %>
+        <% employees.forEach(employee => { %>
         <tr>
           <td><%= employee.name %></td>
           <td><%= employee.address %></td>
