--- a/views/addEmployee.ejs
+++ b/views/addEmployee.ejs
@@ -9,7 +9,7 @@
   <body>
     <h1>Add New Employee</h1>
 
-    <form action="/users/add" method="post">
+    <form action="/employees/add" method="post">
       <label for="name">Name:</label><br />
       <input type="name" id="name" name="name" /><br />
 
