--- a/views/deleteEmployee.ejs
+++ b/views/deleteEmployee.ejs
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Delete User</h1>
+    <h1>Delete Employee</h1>
 
-    <form action="/users/delete/<%= user.id %>" method="post">
+    <form action="/employee/delete/<%= employee.id %>" method="post">
         <h3>
-            Are you sure you want to delete <%= user.name %>?
+            Are you sure you want to delete <%= employee.name %>?
         </h3>
 
         <input type="submit" value="Submit">
