--- a/views/addEmployee.ejs
+++ b/views/addEmployee.ejs
@@ -4,23 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Add New Employee</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
   <body>
     <h1>Add New Employee</h1>
 
     <form id="employeeForm" action="/employees/add" method="post">
       <label for="name">Name:</label><br />
-      <input type="text" id="name" name="name" required /><br />
+      <input type="text" id="name" name="name" /><br />
 
       <label for="address">Address:</label><br />
-      <input type="text" id="address" name="address" required /><br />
+      <input type="text" id="address" name="address" /><br />
 
       <label for="salary">Salary:</label><br />
-      <input type="number" id="salary" name="salary" required /><br />
+      <input type="number" id="salary" name="salary" /><br />
 
       <label for="role">Role:</label><br />
-      <input type="text" id="role" name="role" required /><br />
+      <input type="text" id="role" name="role" /><br />
 
       <input type="submit" value="Submit" />
     </form>
