--- a/views/updateUser.ejs
+++ b/views/updateUser.ejs
@@ -1,26 +1,31 @@
 <!-- index.ejs -->
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Update User</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="/stylesheets/style.css" />
+  </head>
+  <body>
     <h1>Update User</h1>
 
     <form action="/users/update/<%= user.id %>" method="post">
-        <label for="name">Name:</label><br>
-        <input type="text" id="name" name="name" value="<%= user.name %>"><br>
+      <label for="name">Name:</label><br />
+      <input type="text" id="name" name="name" value="<%= user.name %>" /><br />
 
-        <label for="email">Email:</label><br>
-        <input type="email" id="email" name="email" value="<%= user.email %>"><br>
+      <label for="email">Email:</label><br />
+      <input
+        type="email"
+        id="email"
+        name="email"
+        value="<%= user.email %>"
+      /><br />
 
-        <label for="role">Role:</label><br>
-        <input type="text" id="role" name="role" value="<%= user.role %>"><br>
+      <label for="role">Role:</label><br />
+      <input type="text" id="role" name="role" value="<%= user.role %>" /><br />
 
-        <input type="submit" value="Submit">
-    </form> 
-</body>
+      <input type="submit" value="Submit" />
+    </form>
+  </body>
 </html>
