added inital branding

--- a/views/deleteUser.ejs
+++ b/views/deleteUser.ejs
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Delete User</h1>
+    <h1 class="blue">Delete User</h1>
 
     <form action="/users/delete/<%= user.id %>" method="post">
-        <h3>
+        <h3 class = "blue">
             Are you sure you want to delete <%= user.name %>?
         </h3>
 
