--- a/views/updateUser.ejs
+++ b/views/updateUser.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Update User</h1>
+    <h1 class="blue">Update User</h1>
 
     <form action="/users/update/<%= user.id %>" method="post">
         <label for="name">Name:</label><br>
