--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,93 @@
 body {
   padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font: 14px "galano grotesque", sans-serif;
 }
 
 a {
-  color: #00B7FF;
+  text-decoration-color: #283583, #61a83f,#ffffff,#41679f,#004631, #575756;
+  background-color: #ec6608, #cfd600, #009fe3;
+
 }
+
+/* this is from package-lock.json
+"color-convert" :"^2.0.1";
+"supports-color": "^7.1.0";
+"color-name"= "~1.1.4"
+"version": "7.2.0"
+*/
+
+/* not liking these colours being separate
+*/
+.blue {
+  color: #283583; 
+}
+
+.green {
+  color: #61a83f;
+}
+
+.white {
+  color: #ffffff;
+}
+
+.mid-blue {
+  color: #41679f;
+}
+
+.dark-green {
+  color: #004631;
+}
+
+.grey {
+  color: #575756;
+}
+
+/* Secondary Colors */
+.orange {
+  color: #ec6608;
+}
+
+.bright-green {
+  color: #cfd600;
+}
+
+.bright-blue {
+  color: #009fe3;
+}
+
+/* pasted this from a previous project to help guide me
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+}
+
+.myborder {
+    color: darkred;
+    background-color: blanchedalmond;
+}
+
+#myborder {
+
+    border-style: double;
+    border-color: darkred;
+}
+
+a{
+    text-decoration: none;
+}
+a:link {
+    color: red;
+}
+   
+a:visited {
+    color: purple;
+}
+
+a:hover {
+    color: pink;
+}
+
+a:active {
+    color: grey;
+}
+    */
