--- a/views/addUser.ejs
+++ b/views/addUser.ejs
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Add New User</h1>
+    <h1 class="blue">Add New User</h1>
+
+    
 
     <form action="/users/add" method="post">
         <label for="name">Name:</label><br>
