--- a/views/users.ejs
+++ b/views/users.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>User List</h1>
+    <h1 class="blue">User List</h1>
 
     <% if (users && users.length > 0) { %>
         <table>
