--- a/views/updateEmployee.ejs
+++ b/views/updateEmployee.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Update User</h1>
+    <h1>Update Employee</h1>
 
     <form action="/employees/update/<%= employee.id %>" method="post">
         <label for="name">Name:</label><br>
