--- a/views/addUser.ejs
+++ b/views/addUser.ejs
@@ -5,10 +5,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Add New User</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 <body>
-    <h1 class="blue">Add New User</h1>
+    <h1 class="bright-blue">Add New User</h1>
 
     
 
