--- a/views/employee.ejs
+++ b/views/employee.ejs
@@ -5,10 +5,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Employee Information</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
   <body>
-    <h1>Employee Information</h1>
+    <h1 class="bright-green">Employee Information</h1>
 
     <% if (employee) { %>
     <table>
