--- a/views/updateUser.ejs
+++ b/views/updateUser.ejs
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Update User</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 <body>
-    <h1 class="blue">Update User</h1>
+    <h1 class="mid-blue">Update User</h1>
 
     <form action="/users/update/<%= user.id %>" method="post">
         <label for="name">Name:</label><br>
