--- a/views/employees.ejs
+++ b/views/employees.ejs
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
   <body>
+    <%- include('partials/nav') %>
     <h1 class="dark-green">Employee List</h1>
 
     <% if (employees && employees.length > 0) { %>
