--- a/views/users.ejs
+++ b/views/users.ejs
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 <body>
+    <%- include('partials/nav') %>
     <h1 class="blue">User List</h1>
 
     <% if (users && users.length > 0) { %>
