--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,9 +1,11 @@
 <!-- views/partials/nav.ejs -->
-<nav>
-    <ul>
-      <li><a href="/employees">Employee List</a></li>
-      <li><a href="/users">Users</a></li>
-       
+<nav class="navBar">
+    <img src="/images/kainos_logo.png" alt="Kainos Logo" class="navbar-logo">
+    <div class="navBarContainer">
+    <ul class="nav-bar-links">
+      <li><a class="navBarLink" href="/employees">Employee List</a></li>
+            
     </ul>
+    </div>
   </nav>
   
