--- a/views/employees.ejs
+++ b/views/employees.ejs
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Employee List</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="stylesheet/style.css">
 </head>
 <body>
     <h1>Employee List</h1>
@@ -20,21 +20,17 @@
                     <th>Salary</th>
                     <th>Role</th>
                     <th>Employee Number</th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
+                   
                 </tr>
             </thead>
             <tbody>
                 <% employees.forEach(employee => { %>
                     <tr>
-                        <td><%= employee.name %></td>
-                        <td><%= employee.address %></td>
-                        <td><%= employee.salary %></td>
-                        <td><%= employee.role %></td>
-                        <td><%= employee.employeeNumber</td>
+                        <td><%- employee.name %></td>
+                        <td><%- employee.address %></td>
+                        <td><%- employee.salary %></td>
+                        <td><%- employee.role %></td>
+                        <td><%- employee.employeeNumber %></td>
                     </tr>
                 <% }); %>
             </tbody>
@@ -47,49 +43,4 @@
         <input type="submit" value="Create New Employee">
     </form> 
 </body>
-=======
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Employee List</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <h1>Employee List</h1>
-
-    <% if (employees && employees.length > 0) { %>
-    <table>
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Address</th>
-          <th>Salary</th>
-          <th>Role</th>
-          <th></th>
-          <th></th>
-        </tr>
-      </thead>
-      <tbody>
-        <% employees.forEach(employee => { %>
-        <tr>
-          <td><%= employee.name %></td>
-          <td><%= employee.address %></td>
-          <td><%= employee.salary %></td>
-          <td><%= employee.role %></td>
-          <td><a href="/employees/<%= employee.id %>">View</a></td>
-          <td><a href="/employees/update/<%= employee.id %>">Edit</a></td>
-          <td><a href="/employees/delete/<%= employee.id %>">Delete</a></td>
-        </tr>
-        <% }); %>
-      </tbody>
-    </table>
-    <% } else { %>
-    <p>No employees found.</p>
-    <% } %>
-
-    <form action="/employees/add" method="get">
-      <input type="submit" value="Create New Employee" />
-    </form>
-  </body>
-
 </html>
